# kortex_ws

./: .gitignore  ISAAC_KINOVA_COMMANDS.md  README.md
ros2_kortex/kortex_bringup/: CMakeLists.txt  package.xml
ros2_kortex/kortex_bringup/launch/: isaac_mirror.launch.py  isaac_to_real.launch.py  kinova_read_only_isaac_mirror.launch.py
ros2_kortex/kortex_bringup/scripts/: isaac_to_real_trajectory_bridge.py  kinova_read_only_joint_state_publisher.py  real_to_isaac_joint_state_bridge.py
ros2_kortex/kortex_description/robots/: gen3_7dof_robotiq_2f_140.urdf  gen3_7dof_robotiq_2f_140_isaac.urdf  gen3_7dof_robotiq_2f_140_isaac_root.urdf
ros2_kortex/kortex_description/robots/gen3_7dof_robotiq_2f_140_isaac_root/: gen3_7dof_robotiq_2f_140_isaac_root.usd
ros2_kortex/kortex_driver/: CMakeLists.txt  package.xml
ros2_kortex/kortex_driver/src/: kinova_read_only_joint_state_publisher.cpp
ros2_kortex/kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_140_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
ros2_kortex/kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_140_moveit_config/config/: gen3.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
ros2_kortex/kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_140_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  robot.launch.py  rsp.launch.py  setup_assistant.launch.py  sim.launch.py  spawn_controllers.launch.py  (+1 more)
ros2_robotiq_gripper/robotiq_description/urdf/: 2f_140.ros2_control.xacro
(+3 files in other folders)
